# dummy-online-store

./: .coveragerc  .gitignore  Makefile  README.md  config.py  demoblaze.py  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml
tests/: test_cart.py  test_product_page.py
