[tool.poetry]
name = "selenium-qa"
version = "0.1.1"
description = ""
authors = ["ekaterina"]
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.0.0"
flake8 = "^7.1.0"
pytest = "^6.2.5"
coverage = "^7.6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
